--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
-DB_HOST=???
-DB_PORT=???
-DB_NAME=???
-DB_USERNAME=???
-DB_PASSWORD=???
+# MySQL connection information on Railway
+# Connection URL structure (for reference): mysql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
+DB_HOST=containers-us-west-78.railway.app       # MySQL host address (provided by Railway)
+DB_PORT=3306                                    # MySQL's default port
+DB_NAME=mydatabase                              # Database's name created in Railway
+DB_USERNAME=myuser                              # MySQL username
+DB_PASSWORD=mypassword                          # MySQL password
 
-# URL connects with JDBC
-DB_URL=???
+# JDBC connection URL (example with SSL disabled and UTC timezone)
+# Note: Some frameworks require username and password in URL or as separate config
+DB_URL=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?useSSL=false&serverTimezone=UTC
