--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,22 @@
+# Application Name
 spring.application.name=bookreviewhub-backend
 
+# ----------------------------
+# Database Configuration (shared across all environments, values are injected from environment variables)
+# ----------------------------
 spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# Hibernate
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+# ----------------------------
+# JPA & Hibernate
+# ----------------------------
+spring.jpa.hibernate.ddl-auto=update  # Automatically update schema (not recommended in prod)
+spring.jpa.show-sql=true              # Show SQL queries in logs
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# Flyway (if using)
-spring.flyway.enabled=false
+# ----------------------------
+# Flyway (for schema versioning)
+# ----------------------------
+spring.flyway.enabled=false           # Enable this only if using Flyway (typically true in dev/prod)
