chore(config): improve flyway and jwt config in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,11 +12,18 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # ----------------------------
 # JPA & Hibernate
 # ----------------------------
-spring.jpa.hibernate.ddl-auto=update  # Automatically update schema (not recommended in prod)
-spring.jpa.show-sql=true              # Show SQL queries in logs
+spring.jpa.hibernate.ddl-auto=update            # Automatically update schema (not recommended in prod)
+spring.jpa.show-sql=true                        # Show SQL queries in logs
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # ----------------------------
 # Flyway (for schema versioning)
 # ----------------------------
-spring.flyway.enabled=false           # Enable this only if using Flyway (typically true in dev/prod)
+spring.flyway.enabled=false                     # Enable this only if using Flyway (typically true in dev/prod)
+spring.flyway.locations=classpath:db/migration  # Location of Flyway SQL files
+
+# ----------------------------
+# JWT config
+# ----------------------------
+app.jwt.secret=YourJWTSecretKey
+app.jwt.expiration=86400000
