refactor: improve descriptions in application-dev.properties and application-prod.properties

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,13 +1,16 @@
-# application-dev.properties
+# Profile: Development
+# No need to reassign active profile here; it's passed via command line or application.properties
 
-# Already using 'dev' profile - no need for reasign
-# spring.profiles.active=dev
-
-# Use Flyway in dev
+# Enable Flyway for schema versioning
 spring.flyway.enabled=true
-spring.jpa.hibernate.ddl-auto=validate  # Let Flyway manage schema
 
-# Optional: H2 for local testing (if applicable)
+# Validate schema against Flyway migrations; don't auto-modify schema
+spring.jpa.hibernate.ddl-auto=validate
+
+# Show SQL queries in logs for debugging
+spring.jpa.show-sql=true
+
+# Optional: Uncomment to use in-memory H2 DB for quick local testing
 # spring.datasource.url=jdbc:h2:mem:testdb
 # spring.datasource.driver-class-name=org.h2.Driver
 # spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
