--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,13 +1,11 @@
-# application-prod.properties
+# Profile: Production
+# Do NOT set spring.profiles.active here; it should be passed as a runtime argument
 
-# Environment-specific overrides for production
-spring.profiles.active=prod
-
-# Use Flyway in production (should be true)
+# Enable Flyway in production to manage DB migrations
 spring.flyway.enabled=true
 
-# Do not auto update schema in prod
+# Enforce schema validation; never auto-update schema in prod
 spring.jpa.hibernate.ddl-auto=validate
 
-# Disable showing SQL logs in prod
+# Do not show SQL queries in logs (for security and performance)
 spring.jpa.show-sql=false
