--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
+# application.properties (default shared config)
+
 # Application Name
 spring.application.name=bookreviewhub-backend
 
 # ----------------------------
-# Database Configuration (shared across all environments, values are injected from environment variables)
+# Shared Database Configuration (used in all profiles, values injected from env variables)
 # ----------------------------
 spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 spring.datasource.username=${DB_USERNAME}
@@ -17,7 +19,7 @@ spring.jpa.show-sql=true                        # Show SQL queries in logs
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # ----------------------------
-# Flyway (for schema versioning)
+# Flyway (for schema versioning: default = disabled; enable in specific profiles)
 # ----------------------------
 spring.flyway.enabled=false                     # Enable this only if using Flyway (typically true in dev/prod)
 spring.flyway.locations=classpath:db/migration  # Location of Flyway SQL files
