--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,29 +3,43 @@
 # Application Name
 spring.application.name=bookreviewhub-backend
 
-# ----------------------------
-# Shared Database Configuration (used in all profiles, values injected from env variables)
-# ----------------------------
+# ==============================================================================================
+# == Shared Database Configuration (used in all profiles, values injected from env variables) ==
+# ==============================================================================================
 spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# ----------------------------
-# JPA & Hibernate
-# ----------------------------
-spring.jpa.hibernate.ddl-auto=update            # Automatically update schema (not recommended in prod)
-spring.jpa.show-sql=true                        # Show SQL queries in logs
+# =====================
+# == JPA & Hibernate ==
+# =====================
+
+# Automatically update schema (not recommended in prod)
+spring.jpa.hibernate.ddl-auto=validate
+
+# Show SQL queries in logs
+spring.jpa.show-sql=true
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# ----------------------------
-# Flyway (for schema versioning: default = disabled; enable in specific profiles)
-# ----------------------------
-spring.flyway.enabled=false                     # Enable this only if using Flyway (typically true in dev/prod)
-spring.flyway.locations=classpath:db/migration  # Location of Flyway SQL files
+# =====================================================================================
+# == Flyway (for schema versioning: default = disabled; enable in specific profiles) ==
+# =====================================================================================
 
-# ----------------------------
-# JWT config
-# ----------------------------
-app.jwt.secret=YourJWTSecretKey
-app.jwt.expiration=86400000
+# Enable this only if using Flyway (typically true in dev/prod)
+spring.flyway.enabled=false
+
+# Location of Flyway SQL files
+spring.flyway.locations=classpath:db/migration
+
+# ================
+# == JWT config ==
+# ================
+
+# A 256-bit Base64-encoded secret key used to sign and verify JWT tokens
+# You can generate one at: https://generate.plus/en/base64 (choose "length in bytes" = 32)
+app.jwt.secret=${APP_JWT_SECRET}
+
+# JWT expiration time in milliseconds
+app.jwt.expiration=${APP_JWT_EXPIRATION}
