--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,38 @@
+# ============================
+# == Database Configuration ==
+# ============================
+
 # MySQL connection information on Railway
 # Connection URL structure (for reference): mysql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
-DB_HOST=containers-us-west-78.railway.app       # MySQL host address (provided by Railway)
-DB_PORT=3306                                    # MySQL's default port
-DB_NAME=mydatabase                              # Database's name created in Railway
-DB_USERNAME=myuser                              # MySQL username
-DB_PASSWORD=mypassword                          # MySQL password
+
+# MySQL host address (provided by Railway)
+DB_HOST=containers-us-west-78.railway.app
+
+# MySQL's default port
+DB_PORT=3306
+
+# Database's name created in Railway
+DB_NAME=mydatabase
+
+# MySQL username
+DB_USERNAME=myuser
+
+# MySQL password
+DB_PASSWORD=mypassword
 
 # JDBC connection URL (example with SSL disabled and UTC timezone)
 # Note: Some frameworks require username and password in URL or as separate config
 DB_URL=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?useSSL=false&serverTimezone=UTC
+
+# =======================
+# == JWT Configuration ==
+# =======================
+
+# A 256-bit Base64-encoded secret key used to sign and verify JWT tokens
+# You can generate one at https://generate.plus/en/base64 (32 bytes = 256 bits)
+APP_JWT_SECRET=5Ap6+4+p97sXrzdjzF4yoWI/5CBIThf83Z20Vi+EM7w=
+
+# JWT expiration time (e.g. PT1M = 1 minute (ISO-8601 format))
+# P: stands for "Period"
+# T: separation between date and time
+APP_JWT_EXPIRATION=PT1M
