chore(config): add CORS configuration to allow cross-origin requests

--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,11 @@ APP_JWT_SECRET=5Ap6+4+p97sXrzdjzF4yoWI/5CBIThf83Z20Vi+EM7w=
 # P: stands for "Period"
 # T: separation between date and time
 APP_JWT_EXPIRATION=PT1M
+
+# ===============================
+# == Backend API Configuration ==
+# ===============================
+
+# The allowed origin for frontend to make requests (for CORS)
+# This should be the frontend client URL for local development (or production).
+ALLOWED_ORIGIN=http://localhost:1357
