--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,9 @@ spring.jpa.hibernate.ddl-auto=validate
 # Show SQL queries in logs
 spring.jpa.show-sql=true
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+# Disable Open Session in View to prevent LazyInitializationException and encourage better service-layer design
+# Close JPA session after transaction ends (recommended for clean architecture)
+spring.jpa.open-in-view=false
 
 # =====================================================================================
 # == Flyway (for schema versioning: default = disabled; enable in specific profiles) ==
@@ -33,9 +35,9 @@ spring.flyway.enabled=false
 # Location of Flyway SQL files
 spring.flyway.locations=classpath:db/migration
 
-# ================
-# == JWT config ==
-# ================
+# =======================
+# == JWT Configuration ==
+# =======================
 
 # A 256-bit Base64-encoded secret key used to sign and verify JWT tokens
 # You can generate one at: https://generate.plus/en/base64 (choose "length in bytes" = 32)
@@ -43,3 +45,10 @@ app.jwt.secret=${APP_JWT_SECRET}
 
 # JWT expiration time in milliseconds
 app.jwt.expiration=${APP_JWT_EXPIRATION}
+
+# =====================================================
+# == CORS Configuration (Allow origins for frontend) ==
+# =====================================================
+
+# Allowed origin for CORS requests
+app.cors.allowed-origin=${ALLOWED_ORIGIN}
