--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
 		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
+			<version>11.8.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.flywaydb</groupId>
