config: set flyway.cleanDisabled per environment for safety

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,6 +4,9 @@
 # Enable Flyway for schema versioning
 spring.flyway.enabled=true
 
+# Allow Flyway clean command in development (use with caution)
+spring.flyway.cleanDisabled=false
+
 # Validate schema against Flyway migrations; don't auto-modify schema
 spring.jpa.hibernate.ddl-auto=validate
 
