--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,6 +4,9 @@
 # Enable Flyway in production to manage DB migrations
 spring.flyway.enabled=true
 
+# Disable Flyway clean in production for safety
+spring.flyway.cleanDisabled=true
+
 # Enforce schema validation; never auto-update schema in prod
 spring.jpa.hibernate.ddl-auto=validate
 
