feat: add Cloudinary configuration to .env.example for avatar uploads

--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,32 @@ APP_JWT_EXPIRATION=PT15M
 
 # Allowed origin (CORS policy) — update for frontend production/development URLs
 ALLOWED_ORIGIN=http://localhost:1357
+
+# ==============================
+# == Cloudinary Configuration ==
+# ==============================
+
+# Cloudinary cloud name: used to identify your Cloudinary account
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+
+# Cloudinary API key: used for authentication with Cloudinary
+CLOUDINARY_API_KEY=your_api_key
+
+# Cloudinary API secret: used for secure operations with Cloudinary
+CLOUDINARY_API_SECRET=your_api_secret
+
+# Cloudinary URL: used to connect to Cloudinary services
+CLOUDINARY_URL=cloudinary://@${CLOUDINARY_API_KEY}:${CLOUDINARY_API_SECRET}@${CLOUDINARY_CLOUD_NAME}
+
+# ===============================
+# == Cloudinary Avatar Uploads ==
+# ===============================
+
+# Local file path for the default avatar in resources (do not change)
+CLOUDINARY_AVATAR_LOCAL_DEFAULT_PATH=cloudinary-avatar-default-local-path
+
+# Public ID for the static default avatar image (used for public access)
+CLOUDINARY_AVATAR_STATIC_PUBLIC_ID=cloudinary-avatar-static-public-id
+
+# Avatar ID name when uploading a account’s custom avatar
+CLOUDINARY_AVATAR_USER_AVATAR_ID=cloudinary-avatar-account-avatar-id
